--- a/LDSA_Team2_Project.ipynb
+++ b/LDSA_Team2_Project.ipynb
@@ -846,6 +846,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world\n"
+     ]
+    }
+   ],
+   "source": [
+    "### my bad \n",
+    "\n",
+    "# join business and reviews\\n\n",
+    "#merged = business.join(pr_reviews, business.business_id == pr_reviews.business_id, 'left_outer').drop('attributes', 'hours')\n",
+    "#merged.show(3, False)\n",
+    "print(\"hello world\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
